opam-version: "1.2"
maintainer: "loic.runarvot@gmail.com"
authors: ["Loïc Runarvot <loic.runarvot@gmail.com>"]
homepage: ""
bug-reports: ""
dev-repo: ""
license: "LGPL-3 with OCaml linking exception"
build: ["jbuilder" "build" "-j" jobs "@install"]
depends: [
  "jbuilder" {build}
  "js_of_ocaml"
]
available: [ocaml-version >= "4.03.0"]
